workaround border-radius/overflow bug

--- a/app/styles/_comfort-syntax.scss
+++ b/app/styles/_comfort-syntax.scss
@@ -1,16 +1,19 @@
 @import 'breakpoints';
-
-.highlight pre {
+.highlight {
+	border: 1px #3f3f3f solid;
+	border-radius: 0.3rem;
     background-color: #3f3f3f;
+}
+.highlight pre {
+	margin: 2px 2px 2px 2px;
     border: 0;
-    border-radius: 0.3rem;
 	padding: 1rem;
 	overflow: auto;
 	font-size: 1rem;
 }
 
 .highlight code,.highlight pre {
-    color: #fff
+    color: #fff;
 }
 
 .highlight .hll {
